--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,26 +1,51 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Connexion</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-card>
+<ion-content class="ion-padding">
+  <ion-card class="login-card">
     <ion-card-header>
       <ion-card-title>Se connecter</ion-card-title>
+      <ion-card-subtitle>Accédez à votre compte</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input [(ngModel)]="email" type="email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Mot de passe</ion-label>
-        <ion-input [(ngModel)]="password" type="password"></ion-input>
-      </ion-item>
-      <ion-button expand="block" (click)="login()">Connexion</ion-button>
-      <ion-button expand="block" fill="clear" (click)="forgotPassword()">Mot de passe oublié ?</ion-button>
-      <ion-button expand="block" fill="outline" (click)="goToRegister()">S'inscrire</ion-button>
+      <form (ngSubmit)="login()">
+        <ion-item lines="full">
+          <ion-icon name="mail-outline" slot="start"></ion-icon>
+          <ion-input
+            label="Email"
+            labelPlacement="floating"
+            [(ngModel)]="email"
+            name="email"
+            type="email"
+            required
+            placeholder="Entrez votre email"
+          ></ion-input>
+        </ion-item>
+        <ion-item lines="full">
+          <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+          <ion-input
+            label="Mot de passe"
+            labelPlacement="floating"
+            [(ngModel)]="password"
+            name="password"
+            type="password"
+            required
+            placeholder="Entrez votre mot de passe"
+          ></ion-input>
+        </ion-item>
+        <ion-button expand="block" type="submit" color="primary" [disabled]="!email || !password">
+          Connexion
+        </ion-button>
+      </form>
+      <ion-button expand="block" fill="clear" color="medium" (click)="forgotPassword()">
+        Mot de passe oublié ?
+      </ion-button>
+      <ion-button expand="block" fill="outline" color="secondary" (click)="goToRegister()">
+        Créer un compte
+      </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
