--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -11,20 +11,20 @@
         <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="Avatar" />
       </ion-avatar>
       <ion-card-title>{{ profile.username }}</ion-card-title>
-      <ion-card-subtitle>{{ profile.role | titlecase }}</ion-card-subtitle>
+      <ion-card-subtitle>{{ profile.role | titlecase }} {{ isConnected ? '(En ligne)' : '(Hors ligne)' }}</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
       <!-- Mode affichage -->
       <div *ngIf="!isEditing" class="profile-details">
-        <ion-item lines="none">
+        <ion-item lines="full">
           <ion-icon name="person-outline" slot="start"></ion-icon>
           <ion-label>
             <h3>Nom d'utilisateur</h3>
             <p>{{ profile.username }}</p>
           </ion-label>
         </ion-item>
-        <ion-item lines="none">
+        <ion-item lines="full">
           <ion-icon name="mail-outline" slot="start"></ion-icon>
           <ion-label>
             <h3>E-mail</h3>
@@ -34,7 +34,6 @@
         <ion-button expand="block" color="primary" (click)="toggleEdit()">
           Modifier le profil
         </ion-button>
-        <!-- Bouton Dashboard visible uniquement pour les admins -->
         <ion-button *ngIf="profile.is_admin" expand="block" color="tertiary" (click)="goToDashboard()">
           Dashboard Admin
         </ion-button>
@@ -42,27 +41,32 @@
 
       <!-- Mode modification -->
       <div *ngIf="isEditing" class="profile-edit">
-        <ion-item>
+        <ion-item lines="full">
           <ion-icon name="person-outline" slot="start"></ion-icon>
           <ion-input
             label="Nom d'utilisateur"
             labelPlacement="floating"
             [(ngModel)]="updatedProfile.username"
+            name="username"
+            type="text"
+            required
             placeholder="Entrez votre nom d'utilisateur"
           ></ion-input>
         </ion-item>
-        <ion-item>
+        <ion-item lines="full">
           <ion-icon name="mail-outline" slot="start"></ion-icon>
           <ion-input
             label="E-mail"
             labelPlacement="floating"
             [(ngModel)]="updatedProfile.email"
-            placeholder="Entrez votre e-mail"
+            name="email"
             type="email"
+            required
+            placeholder="Entrez votre e-mail"
           ></ion-input>
         </ion-item>
         <div class="edit-buttons">
-          <ion-button expand="block" color="primary" (click)="saveProfile()">
+          <ion-button expand="block" color="success" (click)="saveProfile()">
             Enregistrer
           </ion-button>
           <ion-button expand="block" color="medium" fill="outline" (click)="toggleEdit()">
